add overflow hidden

--- a/src/app/about/about-us/about-us.component.html
+++ b/src/app/about/about-us/about-us.component.html
@@ -29,9 +29,9 @@
         Welcome To <span>Lint<span>School</span></span>
       </h1>
       <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-        Welcome to Educamp collection of world-class online learning
+        Welcome to LintSchool collection of world-class online learning
         opportunities. The Educamp Online Learning portal <br />
-        provides a gateway for the public to access Educamp’s extensive learning
+        provides a gateway for the public to access LintSchool’s extensive learning
         content.
       </p>
     </div>
