--- a/src/app/about/pricing/pricing.component.scss
+++ b/src/app/about/pricing/pricing.component.scss
@@ -5,6 +5,9 @@
 @import '../../Scss/components/heads';
 @import '../../Scss/components/buttons';
 
+body {
+    overflow-x: hidden !important ;
+}
 
 /*-----------------------------------------about-head----------------------------*/
 
