--- a/src/app/customer/customer.component.scss
+++ b/src/app/customer/customer.component.scss
@@ -1,113 +1,104 @@
-@import '../Scss/utils/colors';
-@import '../Scss/utils/fonts';
-@import '../Scss/utils/mixins';
-@import '../Scss/utils/spacing';
-@import '../Scss/components/heads';
+@import "../Scss/utils/colors";
+@import "../Scss/utils/fonts";
+@import "../Scss/utils/mixins";
+@import "../Scss/utils/spacing";
+@import "../Scss/components/heads";
 
 
-
-
-.customer {
-    width: 100%;
-    height: 600px;
-    background: linear-gradient(to top, rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-    url('../../assets/images/3.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-    .customer-head {
-        @extend .head;
-        text-align: center;
-        p {
-            font-weight: 400 !important;
-        }
-
-    }
-    .content-carusol {
-        background-color: $color_main;
-        padding: $space_mid $space_mid;
-        width: 95%;
-
-        .customer-title {
-            h4 {
-                color: $color_secondry;
-                @include fontAll($fontSize_small +.2rem, $font-weight1, $font-family-alt);
-                text-transform: uppercase;
-            }
-            p {
-                position: relative;
-                bottom: 6px;
-                color: rgba(0,0,0,0.60);
-                font-size: $fontSize_small;
-                font-weight:$font-weight1;
-            }
-        }
-        .course-info {
-            position: relative;
-            bottom: 6px;
-            article {
-                @include fontAll($fontSize_small, $font-weight1, $font-family-alt);
-                color: rgba(0,0,0,0.80);
-                line-height:30px;
-            }
-            .stars {
-                color: $color_span;
-                i {
-                    padding-right: 5px;
-                    font-size: 12px;
-                }
-            }
-        }
-    }
+body {
+    overflow-x: hidden !important ;
 }
 
 
+.customer {
+  width: 100%;
+  height: 600px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../../assets/images/3.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width:576px) and (min-width: 300px) {
-    .customer {
-        height: auto;
-        .customer-head {
-            h1 {
-                font-size: $fontSize_mid + .5rem;
-            }
-            p {
-                br {
-                    display: none;
-                }
-            }
-        }
-        .content-carusol {
-            margin-left: auto;
-            margin-right:auto ;
-            flex-direction: column; 
-            justify-content: center;
-            img {
-                width: 100px;
-                height: 100px;
-                margin-right: auto;
-                margin-left: auto;
-                margin-bottom: 15px;
-            }
-            .customer-title {
-                text-align: center;
-            }
-            .course-info {
-                text-align: center;
-            }
-        }
+  .customer-head {
+    @extend .head;
+    text-align: center;
+    p {
+      font-weight: 400 !important;
     }
+  }
+  .content-carusol {
+    background-color: $color_main;
+    padding: $space_mid $space_mid;
+    width: 95%;
+
+    .customer-title {
+      h4 {
+        color: $color_secondry;
+        @include fontAll(
+          $fontSize_small + 0.2rem,
+          $font-weight1,
+          $font-family-alt
+        );
+        text-transform: uppercase;
+      }
+      p {
+        position: relative;
+        bottom: 6px;
+        color: rgba(0, 0, 0, 0.6);
+        font-size: $fontSize_small;
+        font-weight: $font-weight1;
+      }
+    }
+    .course-info {
+      position: relative;
+      bottom: 6px;
+      article {
+        @include fontAll($fontSize_small, $font-weight1, $font-family-alt);
+        color: rgba(0, 0, 0, 0.8);
+        line-height: 30px;
+      }
+      .stars {
+        color: $color_span;
+        i {
+          padding-right: 5px;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) and (min-width: 300px) {
+  .customer {
+    height: auto;
+    .customer-head {
+      h1 {
+        font-size: $fontSize_mid + 0.5rem;
+      }
+      p {
+        br {
+          display: none;
+        }
+      }
+    }
+    .content-carusol {
+      margin-left: auto;
+      margin-right: auto;
+      flex-direction: column;
+      justify-content: center;
+      img {
+        width: 100px;
+        height: 100px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 15px;
+      }
+      .customer-title {
+        text-align: center;
+      }
+      .course-info {
+        text-align: center;
+      }
+    }
+  }
 }
