--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,8 @@ website: **;
 */
 
 
-
 body {
-    overflow-x: hidden ;
+    overflow-x: hidden !important ;
 }
 
 nav
@@ -22,3 +21,5 @@ nav
     -ms-transition: all 0.55s;
     -o-transition: all 0.55s;
 }
+
+
